# claudeMusic

./: README.md  install.sh  pyproject.toml
research/: theme-10-architecture-diff.md  theme-10-refactor-plan.md  theme-9-anthropic-rubric.md  theme-9-rubric-recheck.md
skills/claude-music/: SKILL.md  config.json
skills/claude-music/scripts/: check_deps.sh  detect_gpu.sh  music_engine.py  music_engine.sh  rank.py  setup.sh
tests/: test_music_engine.py
